cleanup of code, README.md, and change the .gitignore file

--- a/app/dev_config.cfg
+++ b/app/dev_config.cfg
@@ -32,7 +32,7 @@ SQLALCHEMY_TRACK_MODIFICATIONS = False
 MAIL_SERVER='smtp.gmail.com'
 MAIL_USERNAME='<YOUR EMAIL>'
 #MAIL_PASSWORD=f"{GetPass()[0]}"
-MAIL_PASSWORD="<YOUR PASWORD>"
+MAIL_PASSWORD="<YOUR PASSWORD>"
 MAIL_PORT=587
 MAIL_USE_TLS = True
 
@@ -41,5 +41,3 @@ APLICATION_CONFIGURATION={  "hello_world":[
                                 "NAME"
                             ]
                         }
-
-
